# fastapi-template

./: Dockerfile  pyproject.toml
app/: config.py  main.py
env/: pyvenv.cfg
